--- a/translations/messages.ru.yaml
+++ b/translations/messages.ru.yaml
@@ -21,3 +21,13 @@ Submit: Отправить
 # Create report: Сформировать отчёт
 # Import from file: Импортировать из файла
 # Import: Импортировать
+Query:   Запрос
+Landing: Посадочная
+Group: Группа
+Position: Позиция
+Frequency: Частота
+Project management: Управление проектом
+To manage the key queries of the project, please use the menu below:
+  - 'Для управления ключевыми запросами проекта, пожалуйста, воспользуйтесь меню, расположенным ниже'
+Keys for the project: Ключи для проекта
+Import keywords: Импортировать ключи
